# ercot

./: Cargo.toml  README.md  combined.csv  lz_houston.csv
src/: main.rs  scraper_utils.rs  test.rs
