[package]
name = "ercot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"

# Reqwest crate dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# (OPTIONAL) Scraper crate dependencies 
scraper = "0.15.0"

# CSV crate
csv = "1.2"

# Serde crate
serde = { version = "1.0.152", features = [ "derive" ] } 

# (OPTIONAL) Chrono crate
chrono = "0.4.24"